# SPECTRA

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: issueのテンプレート.md  プルリクエストのテンプレート.md
.storybook/: main.js
01_docs/: SPECTRA_PROJECT.md  環境構築手順.md
01_docs/coding_docs/: tree.md
01_docs/csv_tables/: SPECTRA_掲載データ候補リスト.csv  Webサイト参照リストSPECTRA.xlsx
01_docs/design_docs/: guideline.md  spectra_chat_画面案_0816.xlsx  spectra_chat_画面案_1007.xlsx
01_docs/idea_docs/: プラグイン機能等の拡張性の高いアプリをコンパクトに作成するアイディア.pptx
01_設計/: AtomicDesignについて.md  maplibre.md  コーディング規約.md  サーバー構成について.md  ドメイン駆動設計とCleanArchitectureについて.md  プロジェクト設定.md  交通APIの取得優先順位.md  環境構築手順.md
01_設計/coding_docs/: if文の使い方.md
01_設計/デザイン関係資料/: spectra_chat_画面案.xlsx
02_src/: README.md  ecosystem.config.js  tsdoc.json
02_src/NozawaOpenDataProject/: .env.local  .eslintrc.json  next.config.ts  package.json  tailwind.config.ts
02_src/SPECTRA_CHAT/: README.md  cloudflare-setup.md  compose.yaml
02_プロトタイプ/map-app/: package-lock.json  (+1 more)
03_src/: README.md
03_プロトタイプ/postgis/backend/: .env  Dockerfile  README.md  app.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
03_プロトタイプ/postgis/backend/controller/chat/: chat_controller.py
03_プロトタイプ/postgis/backend/controller/city/: city_controller.py
03_プロトタイプ/postgis/backend/controller/train/: train_controller.py
03_プロトタイプ/postgis/backend/infrastructure/database/train/: train_repository.py
03_プロトタイプ/postgis/backend/infrastructure/mcp/: chat_repository.py
03_プロトタイプ/postgis/backend/train/: index.js
(+1077 files in other folders)
