[project]
name = "postgis"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "mcp[cli]>=1.12.2",
    "google-genai>=1.27.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py311"
line-length = 120


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
